--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ signoff:          "Jason" # Your name
 google_analytics: UA-101222464-1
 share:            true 
 # 分页
-# paginate: 1
-# paginate_path: "page:num"
-# gems: [jekyll-paginate]
+paginate: 9
+paginate_path: "page:num"
+gems: [jekyll-paginate]
 links:
   - name:         首页
     url:          /
