--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ jekyll-theme-WuK: # 我的主题的自定义样式都在这个命名空间
       - | # 网站小图标，可换成你自己的图片，改href中的部分即可
         <link
           rel="apple-touch-icon-precomposed"
-          href="https://gravatar.loli.net/avatar/289efba375d63424de3c49569c446744?s=320"
+          href="/assets/image/dilb.jpeg"
         />
         <link
           rel="shortcut
@@ -398,20 +398,6 @@ jekyll-theme-WuK: # 我的主题的自定义样式都在这个命名空间
           <div>
             <i class="fas fa-copyright fa-fw"></i>
             2017-2020 WuK
-          </div>
-        - | # 我的备案信息，请你的网站删掉这一项。互联网非法外之地！
-          <div>
-            <i class="fas fa-info-circle fa-fw"></i>
-            <a href="http://beian.miit.gov.cn">
-              粤ICP备 20024947号
-            </a>
-          </div>
-        - | # 公安网备信息
-          <div>
-            <img src="http://www.beian.gov.cn/img/new/gongan.png" class="fa-fw"></img>
-            <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=34070202000407">
-              皖公网安备 34070202000407号
-            </a>
           </div>
       wordcount: # 全站字数统计
         enable: false # 本地调试时建议关闭，非常影响站点生成速度（所需时间与博文数量的平方成正比）
