--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ description: | # 头像背后的信息（html格式），<br/>代表换行
   一枚顽强的小天蝎程序员<br/>
   张杰<br/>
   林俊杰<br/>
+  迪丽热巴<br/>
   <a href="https://github.com/Jason-QianHao">
     <i class="fab fa-github"></i>
   </a>
@@ -46,12 +47,12 @@ jekyll-theme-WuK: # 我的主题的自定义样式都在这个命名空间
       - | # 网站小图标，可换成你自己的图片，改href中的部分即可
         <link
           rel="apple-touch-icon-precomposed"
-          href="/assets/image/dilb.jpeg"
+          href="/assets/image/logo.JPG"
         />
         <link
           rel="shortcut
           icon"
-          href="/assets/image/dilb.jpeg"
+          href="/assets/image/logo.JPG"
         />
       - | # 来自lanyon的页面样式，不要改
         <link
@@ -92,7 +93,7 @@ jekyll-theme-WuK: # 我的主题的自定义样式都在这个命名空间
                 "hidden": true,
                 "night": "for(let i=7; i<16; ++i) if(document.body.classList.contains(`theme-base-0`+i.toString(16))) { document.body.classList.remove(`theme-base-0`+i.toString(16)); document.body.classList.add(`theme-base-0`+((i-6)%9+7).toString(16)); break; }",
                 "content": {
-                  "link": ["https://jekyll-theme-WuK.wu-kan.cn"],
+                  "link": ["https://github.com/Jason-QianHao"],
                   "skin": ["要换成我的朋友吗？", "让她放个假吧~"],
                   "hidden": true,
                   "custom": [{
@@ -156,11 +157,11 @@ jekyll-theme-WuK: # 我的主题的自定义样式都在这个命名空间
             background-position: 0% 0%;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            background-image: url(/assets/image/dilb.jpeg);
+            background-image: url(/assets/image/xingkong.jpg);
           }
           @media (min-aspect-ratio: 2400/1850) {
             .wrap {
-              background-image: url(/assets/image/dilb.jpeg);
+              background-image: url(/assets/image/xingkong.jpg);
             }
           }
           .sidebar-overlay #sidebar-checkbox:checked ~ .wrap {
@@ -224,7 +225,7 @@ jekyll-theme-WuK: # 我的主题的自定义样式都在这个命名空间
       disable: false # 是否不显示sidebar
       avatar: # 侧边栏显示的头像
         enable: true
-        img: /assets/image/dilb.jpeg # 头像的地址
+        img: /assets/image/logo.JPG # 头像的地址
       nav: # 导航部分的内容，你也可以自己增加文字、图标（来自fontawesome）和对应的链接
         - title: '<i class="fas fa-home fa-fw"></i> 首页'
           href: /
@@ -558,7 +559,7 @@ jekyll-theme-WuK: # 我的主题的自定义样式都在这个命名空间
       | # 我的文章使用最宽松的知识共享协议：署名 4.0 国际 (CC BY 4.0)。您可以自由地：共享 — 在任何媒介以任何形式复制、发行本作品；演绎 — 修改、转换或以本作品为基础进行创作；在任何用途下，甚至商业目的。只要你遵守许可协议条款，许可人就无法收回你的这些权利。惟须遵守下列条件：署名 — 您必须给出适当的署名，提供指向本许可协议的链接，同时标明是否（对原始作品）作了修改。您可以用任何合理的方式来署名，但是不得以任何方式暗示许可人为您或您的使用背书。
       <br/>
       <i class="fas fa-coffee fa-fw"></i>
-      <a href="/merger/">如果这篇博客帮助到你，可以请我喝一杯咖啡~</a>
+      <a>如果这篇博客帮助到你，可以请我喝一杯咖啡~</a>
       <br/>
       <i class="fab fa-creative-commons-by fa-fw"></i>
       <a
@@ -580,46 +581,6 @@ jekyll-theme-WuK: # 我的主题的自定义样式都在这个命名空间
       enable: true
     year_count: true
     prepend: <i class="fas fa-folder-open"></i>
-  merger: # 打赏页，需要配置！
-    append_to_head:
-      - | # 需要配置的变量见<https://merger.justhx.com/cn/docs/configure>
-        <script>
-          var usage = "payment";
-          var wechat = "wxp://f2f0BhUoIC_9gex7-tC2PRvVuoA486mK5WyC";
-          var tenpay = "https://i.qianbao.qq.com/wallet/sqrcode.htm?m=tenpay&f=wallet&a=1&ac=CAEQ77zFwQMY-6u57gU%3D_xxx_sign&u=942759535&n=%E8%94%9A";
-          var alipay = "https://qr.alipay.com/fkx02750b5kbplxvudqrx16";
-          var paypal = "https://paypal.me/wukan0621";
-          var myname = "WuK";
-          var profile = "/assets/image/dilb.jpeg";
-          var multilingual = true;
-          var myname_hans = "吴坎";
-          var myname_hant = "吴坎";
-          var myname_eng = "WuK";
-          var title = "选择你的支付方式";
-          var subtitle = "跟随进一步的指示以向" + myname + "付款";
-          var qrcodeapi = "https://www.zhihu.com/qrcode?url=";
-        </script>
-      - |
-        <meta
-          charset="utf-8"
-        />
-        <meta
-          name="viewport"
-          content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-        />
-        <meta
-          http-equiv="Content-Security-Policy"
-          content="upgrade-insecure-requests"
-        />
-      - | # merger的页面样式
-        <link
-          rel="stylesheet"
-          href="https://cdn.jsdelivr.net/combine/gh/hifocus/merger@0.21.1/assets/styles/spectre.css/spectre-modified.min.css,gh/hifocus/merger@0.21.1/assets/styles/style.min.css"
-        />
-        <script
-          src='https://cdn.jsdelivr.net/combine/gh/hifocus/merger@0.21.1/assets/js/jQuery/jquery.min.js,gh/hifocus/merger@0.21.1/assets/js/jquery-qrcode/jquery-qrcode.min.js,gh/hifocus/merger@0.21.1/assets/js/JavaScript_MD5/md5.min.js,gh/hifocus/merger@0.21.1/assets/js/function.min.js,gh/hifocus/merger@0.21.1/assets/js/font_974919_xgtacm93vxp.min.js'
-          defer='defer'
-        ></script>
   home: # 展示页的配置可跳过，详见<https://revealjs.com/>
     append_to_section_tag:
       - key: data-markdown
