想让blog边栏自动显示

--- a/_config.yml
+++ b/_config.yml
@@ -208,7 +208,7 @@ jekyll-theme-WuK: # 我的主题的自定义样式都在这个命名空间
           }
         </style>
     sidebar: # 此配置项下是一些关于侧边栏的配置
-      disable: true # 是否不显示sidebar
+      disable: false # 是否不显示sidebar
       avatar: # 侧边栏显示的头像
         enable: true
         img: /assets/image/logo.JPG # 头像的地址
